--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<store></store>
+<app-toolbar></app-toolbar>
+<!-- The routed views render in the <router-outlet>-->
+<router-outlet></router-outlet>
