--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,7 +1,7 @@
 <div class = "container-fluid">
   <div class = "row">
     <div class = "col bg-dark text-white">
-      <a   class = "navbar-brand">SPORTS STORE</a>
+      <h1><a   class = "navbar-brand">SPORTS STORE</a></h1>
     </div>
   </div>
   <div class = "row">
@@ -25,7 +25,7 @@
           </h4>
       <div class = "card-text bg-white p-1">{{ product.description }}</div>
     </div>
-    
+
     <div class="form-inline float-left mr-1">
       <select class="form-control" [value]="productsPerPage"
               (change)="changePageSize($event.target.value)">
