adds logout and redirect after login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,12 +9,12 @@
           <mat-label>Email</mat-label>
           <input
             class="validate"
-            id="email"
-            name="email"
+            id="login"
+            name="login"
             type="email"
             matInput
             placeholder="Digite seu email"
-            [(ngModel)]="signInUser.email"
+            [(ngModel)]="signInUser.login"
             required
           >
         </mat-form-field>
