--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,13 +4,31 @@
   <div id="top-header">
     <div class="container">
       <ul class="header-links pull-left">
-        <li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
-        <li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
-        <li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
+        <li>
+          <a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a>
+        </li>
+        <li>
+          <a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a>
+        </li>
+        <li>
+          <a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a>
+        </li>
       </ul>
-      <ul class="header-links pull-right">
-        <li><a href="#"><i class="fa fa-dollar"></i> R$</a></li>
-        <li><a href="#"><i class="fa fa-user-o"></i> Mimha Conta</a></li>
+      <ul class="header-links pull-right" *ngIf="currentUser">
+        <li>
+          <a href="#"><i class="fa fa-dollar"></i> R$</a>
+        </li>
+        <li nf>
+          <a (click)="logout()"><i class="fa fa-user-o"></i>Logout</a>
+          <!-- <a href="#"><i class="fa fa-user-o"></i> Minha Conta</a> -->
+        </li>
+      </ul>
+      <ul class="header-links pull-right" *ngIf="!currentUser">
+        <li nf>
+          <a routerLink="/login" routerLinkActive="active"
+            ><i class="fa fa-user-o"></i>Login</a
+          >
+        </li>
       </ul>
     </div>
   </div>
@@ -26,7 +44,7 @@
         <div class="col-md-3">
           <div class="header-logo">
             <a routerLink="/" class="logo">
-              <img src="../../../assets/img/logo.png" alt="">
+              <img src="../../../assets/img/logo.png" alt="" />
             </a>
           </div>
         </div>
@@ -41,7 +59,7 @@
                 <option value="1">Category 01</option>
                 <option value="2">Category 02</option>
               </select>
-              <input class="input" placeholder="Search here">
+              <input class="input" placeholder="Search here" />
               <button class="search-btn">Search</button>
             </form>
           </div>
@@ -62,34 +80,67 @@
             <!-- /Wishlist -->
 
             <!-- Cart -->
-            <div class="dropdown" >
-              <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true" style="cursor: pointer;">
+            <div class="dropdown">
+              <a
+                class="dropdown-toggle"
+                data-toggle="dropdown"
+                aria-expanded="true"
+                style="cursor: pointer"
+              >
                 <i class="fa fa-shopping-cart"></i>
                 <span>Your Cart</span>
-                <div class="qty">{{cartData.data[0].numInCart !== 0 ? cartData.data.length : 0}}</div>
+                <div class="qty">
+                  {{
+                    cartData.data[0].numInCart !== 0 ? cartData.data.length : 0
+                  }}
+                </div>
               </a>
-              <div class="cart-dropdown" >
+              <div class="cart-dropdown">
                 <div class="cart-list" *ngIf="cartData.data[0].numInCart !== 0">
-                  <div class="product-widget" *ngFor="let c of cartData.data; let i=index">
+                  <div
+                    class="product-widget"
+                    *ngFor="let c of cartData.data; let i = index"
+                  >
                     <div class="product-img">
-                      <img src="{{c.product?.imagem}}" alt="{{c.product.nome}}" width="20px">
+                      <img
+                        src="{{ c.product?.imagem }}"
+                        alt="{{ c.product.nome }}"
+                        width="20px"
+                      />
                     </div>
                     <div class="product-body">
-                      <h3 class="product-name"><a href="#">{{c.product?.nome}}</a></h3>
-                      <h4 class="product-price"><span class="qty">{{c.numInCart}} x </span>{{c.product?.preco | currency:'USD'}}</h4>
+                      <h3 class="product-name">
+                        <a href="#">{{ c.product?.nome }}</a>
+                      </h3>
+                      <h4 class="product-price">
+                        <span class="qty">{{ c.numInCart }} x </span
+                        >{{ c.product?.preco | currency: "USD" }}
+                      </h4>
                     </div>
-                    <button class="delete" (click)="cartService.DeleteProductFromCart(i)"><i class="fa fa-close"></i></button>
+                    <button
+                      class="delete"
+                      (click)="cartService.DeleteProductFromCart(i)"
+                    >
+                      <i class="fa fa-close"></i>
+                    </button>
                   </div>
-
-
                 </div>
                 <div class="cart-summary">
-                  <small>{{cartData.data[0].numInCart !== 0 ? cartData.data.length : 0}} Item(s) selected</small>
-                  <h5>TOTAL : {{cartTotal | currency:'R$'}}</h5>
+                  <small
+                    >{{
+                      cartData.data[0].numInCart !== 0
+                        ? cartData.data.length
+                        : 0
+                    }}
+                    Item(s) selected</small
+                  >
+                  <h5>TOTAL : {{ cartTotal | currency: "R$" }}</h5>
                 </div>
                 <div class="cart-btns">
                   <a routerLink="/cart">View Cart</a>
-                  <a routerLink="/checkout">Checkout <i class="fa fa-arrow-circle-right"></i></a>
+                  <a routerLink="/checkout"
+                    >Checkout <i class="fa fa-arrow-circle-right"></i
+                  ></a>
                 </div>
               </div>
             </div>
@@ -127,7 +178,6 @@
         <li><a href="#">Categories</a></li>
         <li><a href="#">Games</a></li>
         <li><a href="#">Contact Us</a></li>
-
       </ul>
       <!-- /NAV -->
     </div>
