--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,3 +1,14 @@
 .login-conteiner {
   margin-bottom: 3rem;
 }
+
+.btn-container {
+  display: flex;
+  margin-top: 1rem;
+  justify-content: space-between;
+  margin-top: 1rem;
+
+  a {
+    font-size: 14px;
+  }
+}
