--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -55,12 +55,12 @@
           <div class="header-search">
             <form>
               <select class="input-select">
-                <option value="0">All Categories</option>
+                <option value="0">Categorias</option>
                 <option value="1">Category 01</option>
                 <option value="2">Category 02</option>
               </select>
-              <input class="input" placeholder="Search here" />
-              <button class="search-btn">Search</button>
+              <input class="input" placeholder="Pesquise aqui" />
+              <button class="search-btn">Buscar</button>
             </form>
           </div>
         </div>
@@ -73,7 +73,7 @@
             <div>
               <a href="#">
                 <i class="fa fa-heart-o"></i>
-                <span>Your Wishlist</span>
+                <span>Favoritos</span>
                 <div class="qty">0</div>
               </a>
             </div>
@@ -88,7 +88,7 @@
                 style="cursor: pointer"
               >
                 <i class="fa fa-shopping-cart"></i>
-                <span>Your Cart</span>
+                <span>Carrinho</span>
                 <div class="qty">
                   {{
                     cartData.data[0].numInCart !== 0 ? cartData.data.length : 0
@@ -175,9 +175,9 @@
       <!-- NAV -->
       <ul class="main-nav nav py-3">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Categories</a></li>
-        <li><a href="#">Games</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Categorias</a></li>
+        <li><a href="#">Jogos</a></li>
+        <li><a href="#">Fale Conosco</a></li>
       </ul>
       <!-- /NAV -->
     </div>
