--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,13 @@
 <div class="container login-conteiner">
   <div class="col-md-6 offset-md-3 mt-5">
+    <div class="alert alert-danger" role="alert" *ngIf="error">
+      <span
+        class="glyphicon glyphicon-exclamation-sign"
+        aria-hidden="true"
+      ></span>
+      <span class="sr-only">Erro:</span>
+      Endereço de email e/ou senha inválido(s)!
+    </div>
     <div class="card">
       <h4 class="card-header">Fazer login</h4>
       <div class="card-body">
