--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,12 +1,12 @@
 <!-- FOOTER -->
-<footer id="footer">
+<footer id="footer" *ngIf="currentUser">
     <!-- top footer -->
-    <div class="section">
+    <div class="section" >
       <!-- container -->
-      <div class="container">
+      <div class="container ">
         <!-- row -->
-        <div class="row">
-          <div class="col-md-3 col-xs-6">
+        <div class="row" >
+          <div class="col-md-3 col-xs-6" >
             <div class="footer">
               <h3 class="footer-title">About Us</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
