--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -51,7 +51,7 @@
         <!-- /LOGO -->
 
         <!-- SEARCH BAR -->
-        <div class="col-md-6">
+        <div class="col-md-6" *ngIf="currentUser">
           <div class="header-search">
             <form>
               <select class="input-select">
@@ -67,7 +67,7 @@
         <!-- /SEARCH BAR -->
 
         <!-- ACCOUNT -->
-        <div class="col-md-3 clearfix">
+        <div class="col-md-3 clearfix" *ngIf="currentUser">
           <div class="header-ctn">
             <!-- Wishlist -->
             <div>
@@ -167,7 +167,7 @@
 <!-- /HEADER -->
 
 <!-- NAVIGATION -->
-<nav id="navigation">
+<nav id="navigation" *ngIf="currentUser">
   <!-- container -->
   <div class="container">
     <!-- responsive-nav -->
