--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -5,7 +5,7 @@
       <div class="card-body">
         <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
-            <label for="name">Nome</label>
+            <label for="name">Nome Completo</label>
             <input
               type="text"
               formControlName="name"
