--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,11 @@
 .disabled{
-    cursor: not-allowed;
+  cursor: not-allowed;
+}
+
+.product-img {
+  flex-shrink: 0;
+  width: 20vw;
+  height: 25vh;
+  object-fit: contain;
+  margin: auto;
 }
